# SLICOT_C

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Doxyfile  GEMINI.md  agenet.md  make.inc  make_Unix.inc  pyproject.toml  requirements.txt  vcpkg-configuration.json  vcpkg.json
.claude/: settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  postCreate.sh
benchmark_data/: agents.md
cmake/: SLICOTHelpers.cmake  slicot_sources.cmake
docs/: BUILD_WINDOWS.md  CONTRIBUTING.md  CONTRIBUTING_FOR_AI.md  Installation.md
examples/: CMakeLists.txt  TMB03LD.f  agents.md
include/: ab01md.h  ab01nd.h  ab01od.h  ab04md.h  ab05md.h  ab05nd.h  ab05od.h  ab05pd.h  ab05qd.h  ab07nd.h  ab08md.h  ab08nd.h  ab08nz.h  ab09ad.h  ab09ax.h  ab09bd.h  ab09md.h  ab09nd.h  ab13bd.h  ab13dd.h  ab13ed.h  ab13fd.h  ab13md.h  ag08bd.h  de01od.h  dg01nd.h  dk01md.h  ib01ad.h  ib01bd.h  ib01cd.h  ib01rd.h  ib03ad.h  ib03bd.h  mb02ed.h  mb03rd.h  mb03vd.h  mb03vy.h  mb03wd.h  mb05md.h  mb05nd.h  (+33 more)
src/: CMakeLists.txt  agents.md
src_aux/: CMakeLists.txt
src_c_wrapper/: CMakeLists.txt  ab01md.c  ab01nd.c  ab01od.c  ab04md.c  ab05md.c  ab05nd.c  ab05od.c  ab05pd.c  ab05qd.c  ab07nd.c  ab08md.c  ab08nd.c  ab08nz.c  ab09ad.c  ab09ax.c  ab09bd.c  ab09md.c  ab09nd.c  ab13bd.c  ab13dd.c  ab13ed.c  ab13fd.c  ab13md.c  ag08bd.c  agents.md  de01od.c  dg01nd.c  dk01md.c  ib01ad.c  ib01bd.c  ib01cd.c  ib01rd.c  ib03ad.c  ib03bd.c  mb02ed.c  mb03rd.c  mb03vd.c  mb03vy.c  mb03wd.c  (+34 more)
tests/: CMakeLists.txt  Known_Issues.txt  Readme.md  ab01md_test.cpp  ab01nd_test.cpp  ab01od_test.cpp  ab04md_test.cpp  ab05md_test.cpp  ab05nd_test.cpp  ab05od_test.cpp  ab05pd_test.cpp  ab05qd_test.cpp  ab07nd_test.cpp  ab08md_test.cpp  ab08nd_test.cpp  ab08nz_test.cpp  ab09ad_test.cpp  ab09ax_test.cpp  ab09bd_test.cpp  ab09md_test.cpp  ab09md_verify.py  ab09nd_test.cpp  ab13bd_test.cpp  ab13dd_test.cpp  ab13ed_test.cpp  ab13fd_test.cpp  ab13md_test.cpp  ag08bd_test.cpp  agents.md  de01od_test.cpp  dg01nd_test.cpp  dk01md_test.cpp  ib01ad_test.cpp  ib01bd_test.cpp  ib01cd_test.cpp  ib01rd_test.cpp  ib03ad_test.cpp  ib03bd_test.cpp  mb02ed_test.cpp  mb03rd_test.cpp  (+49 more)
tests/data/: de01od.csv  dg01nd.csv  dk01md.csv  ib01ad.csv  ib01bd.csv  ib01cd.csv  ib03bd.csv  tb05ad.csv  tf01md.csv
tools/: missing_tests.py
