[project]
name = "slicot-c-tooling"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "control==0.10.1",
    "findent==4.3.1; platform_system != \"Linux\" or platform_machine != \"aarch64\"",
    "fonttools==4.58.0",
    "fortls==3.2.2",
    "fprettify==0.3.7",
    "harold==1.0.3",
    "matplotlib==3.10.3",
    "numpy==1.26.4",
    "pytest==8.3.5",
    "scipy==1.15.3",
    "slycot==0.6.0",
]
